# Intellifielddev

./: .env.example  .gitignore  CHECKING_THE_WORK.md  CODEBASE_MAP.md  CONTEXT.md  DEMO.md  DEPLOY.md  README.md  ROADMAP.md  START_HERE.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: analytics.py  auth.py  catalog.py  compliance.py  config.py  db.py  exports.py  hierarchy.py  main.py  payroll.py  responses.py  scope.py  security.py  seed.py  surveys.py  tenants.py  users.py
api/tests/: conftest.py  test_analytics.py  test_catalog.py  test_compliance.py  test_config.py  test_current_claims.py  test_dashboard.py  test_exports.py  test_harness_smoke.py  test_idempotency.py  test_nodes_api.py  test_nodes_bulk.py  test_nodes_write.py  test_org_levels.py  test_payroll.py  test_require_admin.py  test_responses.py  test_scope_isolation.py  test_surveys.py  test_tenants.py  test_users.py
apps/admin/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.module.css  App.test.tsx  (+3 more)
apps/manager/: README.md  index.html  package.json  vite.config.ts
db/: README.md  schema.sql
db/migrations/: 20260613000001_create_tenants_and_users.sql  20260615000001_create_hierarchy.sql  20260615000002_create_skus.sql  20260616000001_create_surveys.sql  20260616000002_create_responses.sql  20260617000001_create_payroll.sql  20260618000001_add_idempotency_keys.sql
docs/: ERD.md  erd.mmd
scripts/: db-migrate.sh  demo.sh
(+244 files in other folders)
