[project]
name = "intelli-api"
version = "0.0.0"
description = "Intelli backend (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "passlib[argon2]>=1.7",
    "pyjwt>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
